--- a/res/play.css
+++ b/res/play.css
@@ -70,8 +70,8 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.9);
-    z-index: 2;
+    background: rgba(243, 243, 239, 0.9);
+    z-index: 3;
 }
 
 .full-screen-content {
